# sqlite_pcre

./: CMakeLists.txt  README.md  main.cpp  pcrs.c  pcrs.h,in  pcrsed.c
